trying to get home layout

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <!-- Site title -->
-  <title>{{ site.name }}</title>
+  <title>{{ site.title }}</title>
 
   <meta http-equip="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
