--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
         <div class="row">
             <div class="col-md-2 center">
-                <a href="/">
+                <a href="{{ site.url }}">
                     <img src="{{ site.url }}/assets/images/profile.png" class="profile-img">
                 </a>
             </div>
@@ -11,28 +11,28 @@
                 <h1 class="profile-name"> {{ site.name }}</h1>
                 <p class="profile-bio"> {{ site.bio }}</p>
                 <p class="profile-links">
-                    <a class="social-link" href="http://twitter.com/{{ site.twitter }}">
+                    <a class="social-link" href="http://twitter.com/{{ site.twitter_username }}">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a class="social-link" href="http://facebook.com/{{ site.facebook }}">
+                    <a class="social-link" href="http://facebook.com/{{ site.facebook_username }}">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="social-link" href="http://instagram.com/{{ site.instagram }}">
+                    <a class="social-link" href="http://instagram.com/{{ site.instagram_username }}">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="social-link" href="http://medium.com/@{{ site.medium }}">
+                    <a class="social-link" href="http://medium.com/@{{ site.medium_username }}">
                         <i class="fab fa-medium-m"></i>
                     </a>
-                    <a class="social-link" href="http://github.com/{{ site.github }}">
+                    <a class="social-link" href="http://github.com/{{ site.github_username }}">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a class="social-link" href="http://behance.net/{{ site.behance }}">
+                    <a class="social-link" href="http://behance.net/{{ site.behance_username }}">
                         <i class="fab fa-behance"></i>
                     </a>
-                    <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin }}">
+                    <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin_username }}">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a class="social-link" href="http://t.me/{{ site.telegram }}">
+                    <a class="social-link" href="http://t.me/{{ site.telegram_username }}">
                         <i class="fab fa-telegram-plane"></i>
                     </a>
                 </p>
