--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <h1 class="profile-name"> {{ site.name }}</h1>
+                <h1 class="profile-name"> {{ site.title }}</h1>
                 <p class="profile-bio"> {{ site.bio }}</p>
                 <p class="profile-links">
                     <a class="social-link" href="http://twitter.com/{{ site.twitter_username }}">
