--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col-md-4">
                 <h1 class="profile-name"> {{ site.title }}</h1>
-                <p class="profile-bio"> {{ site.bio }}</p>
+                <p class="profile-bio"> {{ site.subtitle }}</p>
                 <p class="profile-links">
                     <a class="social-link" href="http://twitter.com/{{ site.twitter_username }}">
                         <i class="fab fa-twitter"></i>
@@ -41,16 +41,18 @@
             <div class="col-md-6 center">
 
                 <ul class="nav justify-content-end" id="navigation">
+                    {%- assign default_paths = site.pages | map: "path" -%} {%- assign page_paths = site.header_pages | default: default_paths-%}
+                    {%- if page_paths -%} {%- for path in page_paths -%} {%- assign my_page = site.pages | where: "path",path
+                    | first -%} {%- if my_page.title -%}
                     <li class="nav-item">
-                        <a class="nav-link" href="/"> RESUME </a>
+                        <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="/blog">BLOG</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact">CONTACT ME</a>
-                    </li>
+                    {%- endif -%} {%- endfor -%}
+
                 </ul>
+
+                {%- endif -%}
+
             </div>
         </div>
     </div>
