--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-
-{%- include head.html -%}
-
-<body>
-    <div class="container-fluid">
-
-        {%- include header.html -%}
-
-        <div class="col-lg-12">
-
+---
+layout: default
+---
 
             <div class="row">
 
                 <div class="col-lg-8">
+               
                     <ul>
                         {% for post in site.posts %}
                         <div class="card blog-post">
@@ -42,7 +34,7 @@
 
                         <div class="card-header">Categories </div>
                         <div class="card-body text-dark">
-                            {% for tag in site.tags %} {% capture tag_name %}{{ tag | first }}{% endcapture %}
+                            {% for tag in site.categories %} {% capture tag_name %}{{ tag | first }}{% endcapture %}
                             <div id="#{{ tag_name | slugize }}"></div>
                             <li class="tag-head">
                                 <a href="{{ site.baseurl }}/blog/categories/{{ tag_name }}">{{ tag_name }}</a>
@@ -74,13 +66,6 @@
                             </form>
                         </div>
                     </div>
-                </div>
-
             </div>
 
-        </div>
-        {%- include footer.html -%}
-    </div>
-</body>
-
-</html>
+          
