--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 {%- include head.html -%}
 
@@ -10,11 +10,7 @@
 
         <div class="col-lg-12">
 
-            <div class="card">
-
-                {{ content }}
-
-            </div>
+            {{ content }}
 
         </div>
 
