--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,135 +1,118 @@
-<!DOCTYPE html>
-<html lang="en">
+--- 
+layout: default 
+---
 
-{%- include head.html -%}
+    <nav aria-label="breadcrumb" role="navigation">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="/blog">Blog</a>
+        </li>
+        <li class="breadcrumb-item">
+            <a href="/blog/categories">Categories</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+    </ol>
+    </nav>
 
-<body>
-    <div class="container-fluid">
+    <div class="row">
 
-        {%- include header.html -%}
+    <div class="col-lg-8">
 
-        <div class="col-lg-12">
-
-            <nav aria-label="breadcrumb" role="navigation">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                        <a href="/blog">Blog</a>
-                    </li>
-                    <li class="breadcrumb-item">
-                        <a href="/blog/categories">Categories</a>
-                    </li>
-                    <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
-                </ol>
-            </nav>
-
-            <div class="row">
-
-                <div class="col-lg-8">
-
-                    <article class="card" itemscope itemtype="http://schema.org/BlogPosting">
+        <article class="card" itemscope itemtype="http://schema.org/BlogPosting">
 
 
-                        <div class="card-header">
-                            <!-- <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1> -->
-                            <h4 class="post-meta">{{ page.summary }}</h4>
-                            <p class="post-summary">Posted by : {% if page.author %}
-                                <img src="https://www.sujaykundu.com/assets/images/brand/sujay.png" class="author-profile-img">
-                                <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-                                    <span itemprop="name">{{ page.author }}</span>
-                                </span>{% endif %} at
-                                <time datetime="{{ page.date }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
-                            </p>
-                            <span class="disqus-comment-count" data-disqus-identifier="{{ page.url }}"></span>
-                            <p>
-                                {%- include share.html -%}
-                            </p>
-                            <div class="post-categories">
-                                {% if post %} {% assign categories = post.tags %} {% else %} {% assign categories = page.tags %} {% endif %} Category : {%
-                                for category in categories %}
-                                <a href="{{site.baseurl}}/blog/categories/{{category|slugize}}">{{category}}</a>
-                                {% unless forloop.last %}&nbsp;{% endunless %} {% endfor %}
-                            </div>
-
-
-                        </div>
-
-                        <div class="card-body" itemprop="articleBody">
-                            {{ content }} {%- include share.html -%}
-                        </div>
-
-                        <div id="disqus_thread"></div>
-
-                    </article>
-
+            <div class="card-header">
+                <!-- <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1> -->
+                <h4 class="post-meta">{{ page.summary }}</h4>
+                <p class="post-summary">Posted by : {% if page.author %}
+                    <img src="https://www.sujaykundu.com/assets/images/brand/sujay.png" class="author-profile-img">
+                    <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+                        <span itemprop="name">{{ page.author }}</span>
+                    </span>{% endif %} at
+                    <time datetime="{{ page.date }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
+                </p>
+                <span class="disqus-comment-count" data-disqus-identifier="{{ page.url }}"></span>
+                <p>
+                    {%- include share.html -%}
+                </p>
+                <div class="post-categories">
+                    {% if post %} {% assign categories = post.categories %} {% else %} {% assign categories = page.categories %} {% endif %}
+                    Category : {% for category in categories %}
+                    <a href="{{site.baseurl}}/blog/categories/{{category|slugize}}">{{category}}</a>
+                    {% unless forloop.last %}&nbsp;{% endunless %} {% endfor %}
                 </div>
-
-                <div class="col-lg-4">
-
-                    <div class="card">
-
-                        <div class="card-header">Categories </div>
-                        <div class="card-body text-dark">
-                            {% for tag in site.tags %} {% capture tag_name %}{{ tag | first }}{% endcapture %}
-                            <div id="#{{ tag_name | slugize }}"></div>
-                            <li class="tag-head">
-                                <a href="{{ site.baseurl }}/blog/categories/{{ tag_name }}">{{ tag_name }}</a>
-                            </li>
-                            <a name="{{ tag_name | slugize }}"></a>
-
-                            {% endfor %}
-                        </div>
-
-
-                    </div>
-                    <div class="card">
-                        <!-- Begin MailChimp Signup Form -->
-                        <div id="mc_embed_signup">
-                            <form action="https://programmingebooks.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0"
-                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                                target="_blank" novalidate>
-                                <div id="mc_embed_signup_scroll">
-                                    <label for="mce-EMAIL">Subscribe via Email :</label>
-                                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                        <input type="text" name="b_50bab1c85eae24ecfb0f68361_3a2dd721d0" tabindex="-1" value="">
-                                    </div>
-                                    <div class="clear">
-                                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-md btn-default">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <!-- End of Sidebar -->
 
 
             </div>
 
-        </div>
-        {%- include footer.html -%}
+            <div class="card-body" itemprop="articleBody">
+                {{ content }} {%- include share.html -%}
+            </div>
+
+            <div id="disqus_thread"></div>
+
+        </article>
+
     </div>
 
+    <div class="col-lg-4">
 
-    <script>
-        var disqus_config = function () {
-            this.page.url = "http://www.sujaykundu.com{{ page.url }}";  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
+        <div class="card">
+
+            <div class="card-header">Categories </div>
+            <div class="card-body text-dark">
+                {% for tag in site.categories %} {% capture tag_name %}{{ tag | first }}{% endcapture %}
+                <div id="#{{ tag_name | slugize }}"></div>
+                <li class="tag-head">
+                    <a href="{{ site.baseurl }}/blog/categories/{{ tag_name }}">{{ tag_name }}</a>
+                </li>
+                <a name="{{ tag_name | slugize }}"></a>
+
+                {% endfor %}
+            </div>
 
 
-        (function () { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = 'https://sujay-kundu.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
+        </div>
+        <div class="card">
+            <!-- Begin MailChimp Signup Form -->
+            <div id="mc_embed_signup">
+                <form action="https://programmingebooks.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+                    novalidate>
+                    <div id="mc_embed_signup_scroll">
+                        <label for="mce-EMAIL">Subscribe via Email :</label>
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input type="text" name="b_50bab1c85eae24ecfb0f68361_3a2dd721d0" tabindex="-1" value="">
+                        </div>
+                        <div class="clear">
+                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-md btn-default">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End of Sidebar -->
+
+    </div>
+ 
+     <script>
+    var disqus_config = function () {
+        this.page.url = "http://www.sujaykundu.com{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+
+
+    (function () { // DON'T EDIT BELOW THIS LINE
+        var d = document,
+            s = d.createElement('script');
+        s.src = 'https://sujay-kundu.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
     </script>
     <noscript>Please enable JavaScript to view the
-        <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
     </noscript>
-
-</body>
-
-</html>
