profile picture can be changed from _config file

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-2 center">
                 <a href="{{ site.url }}">
-                    <img src="{{ site.url }}/assets/images/profile.png" class="profile-img">
+                    <img src="{{ site.url }}/assets/images/{{ site.author_logo }}" class="profile-img">
                 </a>
             </div>
             <div class="col-md-4">
