image folder renamed to img in assets

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,9 +8,9 @@ layout: default
         <ul>
             {% for post in site.posts %}
             <div class="card blog-post">
-                <img class="card-img-top" src="{{site.url}}/assets/img/blog/posts/{{ post.thumbnail }}" alt="{{ post.title }}">
+                <img class="card-img-top" src="{{site.url}}/assets/img/{{ post.thumbnail }}" alt="{{ post.title }}">
                 <div class="card-body center">
-                    <img src="{{site.url}}/assets/img/user/sujay.png" class="author-profile-img">
+                    <img src="{{site.url}}/assets/img/{{ author_logo }}" class="author-profile-img">
                     <h4 class="card-title">{{ post.title }}</h4>
 
                     <h6 class="card-subtitle mb-2 text-muted">{{ post.date | date: "%b %-d, %Y" }}</h6>
