--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
     <nav aria-label="breadcrumb" role="navigation">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="/blog">Blog</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="/blog/categories">Categories</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
-    </ol>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="/blog">Blog</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="/blog/categories">Categories</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+        </ol>
     </nav>
 
     <div class="row">
@@ -46,7 +46,7 @@ layout: default
             </div>
 
             <div class="card-body" itemprop="articleBody">
-                <img class="card-img-top" src="{{site.url}}/assets/img/{{ post.thumbnail }}" alt="{{ post.title }}"> {{ content }} {%- include share.html -%}
+                <img class="card-img-top" src="{{site.url}}/assets/img/{{ page.thumbnail }}" alt="{{ post.title }}"> {{ content }} {%- include share.html -%}
             </div>
 
             <div id="disqus_thread"></div>
@@ -75,44 +75,28 @@ layout: default
         </div>
         <div class="card">
             <!-- Begin MailChimp Signup Form -->
-            <div id="mc_embed_signup">
-                <form action="https://programmingebooks.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0"
-                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-                    novalidate>
-                    <div id="mc_embed_signup_scroll">
-                        <label for="mce-EMAIL">Subscribe via Email :</label>
-                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_50bab1c85eae24ecfb0f68361_3a2dd721d0" tabindex="-1" value="">
-                        </div>
-                        <div class="clear">
-                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-md btn-default">
-                        </div>
-                    </div>
-                </form>
-            </div>
+            {%- include newsletter.html -%}
         </div>
     </div>
     <!-- End of Sidebar -->
 
-    </div>
+</div>
 
-    <script>
-        var disqus_config = function () {
-            this.page.url = "{{ site.url }}{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
+<script>
+    var disqus_config = function () {
+        this.page.url = "{{ site.url }}{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
 
 
-        (function () { // DON'T EDIT BELOW THIS LINE
-            var d = document,
-                s = d.createElement('script');
-            s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the
-        <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-    </noscript>
+    (function () { // DON'T EDIT BELOW THIS LINE
+        var d = document,
+            s = d.createElement('script');
+        s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the
+    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+</noscript>
