--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <meta name="description" content="{{ site.description }}">
 
   <!-- Stylesheets goes here -->
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
