--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <div class="col-lg-12">
         <div class="row">
             <div class="col-md-2 center">
-                <a href="{{ site.url }}">
-                    <img src="{{ site.url }}/assets/img/{{ site.author_logo }}" class="profile-img">
+                <a href="/">
+                    <img src="/assets/img/{{ site.author_logo }}" class="profile-img">
                 </a>
             </div>
             <div class="col-md-4">
