--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,7 @@
---- 
-layout: default 
----
+--- layout: default ---
 
 
-    <div class="row">
+<div class="row">
 
     <div class="col-lg-8">
 
@@ -36,7 +34,7 @@ layout: default
             <br />
             <div class="row">
                 <div class="col-md-5">
-                    <img src="{{site.url}}/assets/img/projects/gamershub.png" class="project-img" />
+                    <img src="/assets/img/projects/gamershub.png" class="project-img" />
                 </div>
                 <div class="col-md-5">
                     <h4 class="project-title"> Gamers Hub </h4>
@@ -48,7 +46,7 @@ layout: default
             <br />
             <div class="row">
                 <div class="col-md-5">
-                    <img src="{{site.url}}/assets/img/projects/hackify.png" class="project-img" />
+                    <img src="/assets/img/projects/hackify.png" class="project-img" />
                 </div>
                 <div class="col-md-5">
                     <h4 class="project-title"> Hackify Theme for Atom Editor </h4>
@@ -63,11 +61,11 @@ layout: default
     <div class="col-lg-4">
 
         <div class="card">
-        
+
             <h6>
                 <i class="fas fa-map-marker-alt"></i> {{ site.author_location }}</h6>
             <h6>
-                <i class="fas fa-envelope"></i>  {{ site.author_email }}</h6>
+                <i class="fas fa-envelope"></i> {{ site.author_email }}</h6>
             <h6>
                 <i class="fas fa-link"></i> {{ site.author_website_url }} </h6>
 
@@ -84,4 +82,4 @@ layout: default
         </div>
 
     </div>
-    </div>
+</div>
