--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,16 +1,14 @@
---- 
-layout: default
----
+--- layout: default ---
 
-    <div class="row">
+<div class="row">
 
     <div class="col-lg-8">
         <ul>
             {% for post in site.posts %}
             <div class="card blog-post">
-                <img class="card-img-top" src="{{site.url}}/assets/img/{{ post.thumbnail }}" alt="{{ post.title }}">
+                <img class="card-img-top" src="/assets/img/{{ post.thumbnail }}" alt="{{ post.title }}">
                 <div class="card-body center">
-                    <img src="{{site.url}}/assets/img/{{ site.author_logo }}" class="author-profile-img">
+                    <img src="/assets/img/{{ site.author_logo }}" class="author-profile-img">
                     <h4 class="card-title">{{ post.title }}</h4>
 
                     <h6 class="card-subtitle mb-2 text-muted">{{ post.date | date: "%b %-d, %Y" }}</h6>
