--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,6 +1,8 @@
---- layout: default ---
+--- 
+layout: default
+---
 
-<div class="row">
+    <div class="row">
 
     <div class="col-lg-8">
         <ul>
