--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,20 @@
---- layout: default ---
+--- 
+layout: default 
+---
 
-<nav aria-label="breadcrumb" role="navigation">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="/blog">Blog</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="/blog/categories">Categories</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
-    </ol>
-</nav>
+    <nav aria-label="breadcrumb" role="navigation">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="/blog">Blog</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="/blog/categories">Categories</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+        </ol>
+    </nav>
 
-<div class="row">
+    <div class="row">
 
     <div class="col-lg-8">
 
@@ -78,23 +80,23 @@
     </div>
     <!-- End of Sidebar -->
 
-</div>
+    </div>
 
-<script>
-    var disqus_config = function () {
-        this.page.url = "{{ site.url }}{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
+    <script>
+        var disqus_config = function () {
+            this.page.url = "{{ site.url }}{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
 
 
-    (function () { // DON'T EDIT BELOW THIS LINE
-        var d = document,
-            s = d.createElement('script');
-        s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the
-    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript>
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document,
+                s = d.createElement('script');
+            s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the
+        <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+    </noscript>
