--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,9 @@
---- layout: default ---
+--- 
+layout: default 
+---
 
 
-<div class="row">
+    <div class="row">
 
     <div class="col-lg-8">
 
@@ -82,4 +84,4 @@
         </div>
 
     </div>
-</div>
+    </div>
