added work and wakatime

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,16 +17,31 @@ layout: default
             <h1 class="card-title"> Work Experience</h1>
 
             <br />
-            <h4 class="experience-title"> Full Stack Web Developer Intern - Skillenza</h4>
-            <p class="experience-desc"> Worked on Flask, Postgres to build rest apis for Email Campaign Management</p>
+            <div class="row">
+            <div class="col-md-2">
+                <img src="/assets/img/work/google.png" class="company-logo" />
+            </div>
+            <div class="col-md-6">
+                <h4 class="experience-title"> Full Stack Software Engineer</h4>
+                <h6 class="experience-info">Google ( Jan 2017 - Present )</h6>
+                <p class="experience-desc"> Worked on various technologies and built products which helps people globally </p>
 
-            <br />
-            <h4 class="experience-title"> Front End Developer Intern - Glocal Gurus</h4>
-            <p class="experience-desc"> Worked on converting UI to Frontend Pages using HTML, CSS, JS</p>
+            </div>
+            </div>
 
-            <br />
-            <h4 class="experience-title"> Wordpress Intern - Edugorilla </h4>
-            <p class="experience-desc"> Worked in design and development of website using PHP and Wordress </p>
+             <br />
+            <div class="row">
+            <div class="col-md-2">
+                <img src="/assets/img/work/microsoft.png" class="company-logo" />
+            </div>
+            <div class="col-md-6">
+                <h4 class="experience-title"> Front End Engineer</h4>
+                <h6 class="experience-info">Microsoft ( Mar 2015 - Dec 2016 )</h6>
+                <p class="experience-desc"> Worked on various technologies and built products which helps people globally </p>
+
+            </div>
+            </div>
+
 
         </div>
 
@@ -80,7 +95,11 @@ layout: default
         </div>
 
         <div class="card">
-            <h1> Github </h1>
+            <h1> Coding Activity </h1>
+
+            <figure><embed src="https://wakatime.com/share/@sujaykundu777/f540df00-f2d1-46e2-a360-da7e13ed8a66.svg"></embed></figure>
+
+            <figure><embed src="https://wakatime.com/share/@sujaykundu777/1550a9f1-d41a-4745-92a0-181a6fbb2456.svg"></embed></figure>
         </div>
 
     </div>
