--- a/_sass/devlog.scss
+++ b/_sass/devlog.scss
@@ -1,55 +1,65 @@
-body{
-    background-color:#D6DDE1 !important;
+body {
+    background-color: #D6DDE1 !important;
     font-family: 'Montserrat', sans-serif !important;
 }
-header{
+
+header {
     background-color: #F5F5F5;
     height: 200px;
     width: 100%;
     padding: 30px;
 }
-.container-fluid{
+
+.container-fluid {
     margin: 0px !important;
     padding: 0px !important;
 }
 
-.profile-img{
-    width:150px;
+.profile-img {
+    width: 150px;
     height: 150px;
     margin-left: 20px;
 }
-.profile-name{
+
+.profile-name {
     margin-top: 20px;
-   
-}
-.profile-bio,.profile-links{
-    margin-top:5px;
 }
 
-.border{
+.profile-bio,
+.profile-links {
+    margin-top: 5px;
+}
+
+.border {
     border: 1px solid #000;
 }
-.center{
-    text-align:center;
+
+.center {
+    text-align: center;
 }
-.card{
+
+.card {
     margin: 20px !important;
     padding: 20px !important;
 }
-.social-link{
+
+.social-link {
     color: #262222;
     font-size: 15px;
     padding: 5px;
-    margin:2px;
+    margin: 2px;
 }
-#navigation{
+
+#navigation {
     margin-top: 50px;
 }
-.nav-link{
+
+.nav-link {
     font-size: 24px !important;
     color: #000;
 }
-footer{
+
+footer {
     width: 100%;
     height: 70px;
     text-align: center;
@@ -57,30 +67,37 @@ footer{
     background-color: #F5F5F5;
 }
 
-.project-img{
+.company-logo {
+    width: 100px;
+    height: 100px;
+}
+
+.project-img {
     width: 300px;
     height: 200px;
 }
-.author-profile-img{
+
+.author-profile-img {
     width: 50px;
     height: 50px;
 }
-.project-desc{
-    float:left;
+
+.project-desc {
+    float: left;
 }
-.project-link{
+
+.project-link {
     color: gray;
     font-size: 15px;
 }
-.card-header{
+
+.card-header {
     border-radius: 0% !important;
 }
-@media (min-width: 320px) and (max-width: 780px){ 
 
-    header{
+@media (min-width: 320px) and (max-width: 780px) {
+    header {
         height: auto;
         text-align: center;
     }
-
- 
 }
