share link and activity

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,7 @@
---- 
-layout: default 
----
+--- layout: default ---
 
 
-    <div class="row">
+<div class="row">
 
     <div class="col-lg-8">
 
@@ -18,28 +16,28 @@ layout: default
 
             <br />
             <div class="row">
-            <div class="col-md-2">
-                <img src="/assets/img/work/google.png" class="company-logo" />
-            </div>
-            <div class="col-md-6">
-                <h4 class="experience-title"> Full Stack Software Engineer</h4>
-                <h6 class="experience-info">Google ( Jan 2017 - Present )</h6>
-                <p class="experience-desc"> Worked on various technologies and built products which helps people globally </p>
+                <div class="col-md-2">
+                    <img src="/assets/img/work/google.png" class="company-logo" />
+                </div>
+                <div class="col-md-6">
+                    <h4 class="experience-title"> Full Stack Software Engineer</h4>
+                    <h6 class="experience-info">Google ( Jan 2017 - Present )</h6>
+                    <p class="experience-desc"> Worked on various technologies and built products which helps people globally </p>
 
-            </div>
+                </div>
             </div>
 
-             <br />
+            <br />
             <div class="row">
-            <div class="col-md-2">
-                <img src="/assets/img/work/microsoft.png" class="company-logo" />
-            </div>
-            <div class="col-md-6">
-                <h4 class="experience-title"> Front End Engineer</h4>
-                <h6 class="experience-info">Microsoft ( Mar 2015 - Dec 2016 )</h6>
-                <p class="experience-desc"> Worked on various technologies and built products which helps people globally </p>
+                <div class="col-md-2">
+                    <img src="/assets/img/work/microsoft.png" class="company-logo" />
+                </div>
+                <div class="col-md-6">
+                    <h4 class="experience-title"> Front End Engineer</h4>
+                    <h6 class="experience-info">Microsoft ( Mar 2015 - Dec 2016 )</h6>
+                    <p class="experience-desc"> Worked on various technologies and built products which helps people globally </p>
 
-            </div>
+                </div>
             </div>
 
 
@@ -97,10 +95,9 @@ layout: default
         <div class="card">
             <h1> Coding Activity </h1>
 
-            <figure><embed src="https://wakatime.com/share/@sujaykundu777/f540df00-f2d1-46e2-a360-da7e13ed8a66.svg"></embed></figure>
+            {%- include activity.html -%}
 
-            <figure><embed src="https://wakatime.com/share/@sujaykundu777/1550a9f1-d41a-4745-92a0-181a6fbb2456.svg"></embed></figure>
         </div>
 
     </div>
-    </div>
+</div>
