--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
   <!-- Stylesheets goes here -->
   <link rel="stylesheet" href="/assets/css/main.css" />
 
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/img/favicon-16x16.png" type="image/gif" sizes="16x16">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
