--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
     <div class="card">
-
+        <div class="col-md-8 offset-md-2 offset-md-right">
         {{ content }}
-
+         </div>
     </div>
