--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,10 @@ layout: default
     <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="/blog">Blog</a>
+                <a href="/">Blog</a>
             </li>
             <li class="breadcrumb-item">
-                <a href="/blog/categories">Categories</a>
+                <a href="/categories">Categories</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
         </ol>
