--- a/_sass/devlog.scss
+++ b/_sass/devlog.scss
@@ -101,6 +101,25 @@ footer {
     margin: 20px !important;
 }
 
+.responsive-table {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
+pre,
+code {
+    overflow: auto;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    word-break: break-all;
+    font-family: Courier, monospace;
+    font-size: 16px;
+    background-color: #F4F6F8;
+    padding: 5px;
+    display: block;
+}
+
 @media (min-width: 320px) and (max-width: 780px) {
     header {
         height: auto;
