--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,20 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
-
+    <script>
+      (function(d, h, m){
+          var js, fjs = d.getElementsByTagName(h)[0];
+          if (d.getElementById(m)){return;}
+          js = d.createElement(h); js.id = m;
+          js.onload = function(){
+              window.makerWidgetComInit({
+              position: "right",          
+              widget: "ofeeof264otl2l5g-zspk40eq2gaomj2n-higi2qphmveubksi"                
+          })};
+          js.src = "https://makerwidget.com/js/embed.js";
+          fjs.parentNode.insertBefore(js, fjs)
+      }(document, "script", "dhm"))
+  </script>
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
