updated share links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 
-    <p> All Rights Reserved. {{ site.title }}. Subscribe via
+    <p>  {{ site.title }}. Subscribe via
         <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a>
     </p>
 
