--- a/_sass/devlog.scss
+++ b/_sass/devlog.scss
@@ -1,13 +1,14 @@
 body {
     background-color: #D6DDE1 !important;
-    font-family: 'Montserrat', sans-serif !important;
+    font-family: 'Quicksand', sans-serif !important;
 }
 
 header {
     background-color: #F5F5F5;
+    box-shadow: 10px 0px 8px;
     height: 200px;
     width: 100%;
-    padding: 30px;
+    padding: 11px;
 }
 
 .container-fluid {
