--- a/_includes/share.html
+++ b/_includes/share.html
@@ -2,12 +2,12 @@
     Share this on &rarr;
     <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}"
         rel="nofollow" target="_blank" title="Share on Twitter">
-        <img alt="Share on Facebook" src="http://www.sujaykundu.com/assets/img/flat_web_icon_set/color/Twitter.png" />
+        <img alt="Twitter" src="https://simplesharebuttons.com/images/somacro/twitter.png" class="social-icon" />
     </a>
     <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
-        <img alt="Share on Facebook" src="http://www.sujaykundu.com/assets/img/flat_web_icon_set/color/Facebook.png" />
+        <img alt="Facebook" src="https://simplesharebuttons.com/images/somacro/facebook.png" class="social-icon" />
     </a>
     <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">
-        <img alt="Share on Google+" src="http://www.sujaykundu.com/assets/img/flat_web_icon_set/color/Google+.png" />
+        <img alt="Google+" src="https://simplesharebuttons.com/images/somacro/google.png" class="social-icon" />
     </a>
 </div>
