--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -1,9 +1,11 @@
-<!-- Wakatime -->
+<!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
 
+<!-- Pie Chart -->
 <figure>
     <embed src="https://wakatime.com/share/@sujaykundu777/f540df00-f2d1-46e2-a360-da7e13ed8a66.svg"></embed>
 </figure>
 
+<!-- Hours Coded -->
 <figure>
     <embed src="https://wakatime.com/share/@sujaykundu777/1550a9f1-d41a-4745-92a0-181a6fbb2456.svg"></embed>
 </figure>
