--- a/_sass/devlog.scss
+++ b/_sass/devlog.scss
@@ -9,7 +9,7 @@ html {
 header {
     background-color: #F5F5F5;
     box-shadow: 10px 0px 8px;
-    height: 200px;
+    height: auto;
     width: 100%;
     padding: 11px;
 }
